--- a/link-shortener/src/app/components/header/header.component.html
+++ b/link-shortener/src/app/components/header/header.component.html
@@ -15,8 +15,10 @@
       </li>
       <li class="horizonal-space"></li>
       <li class="navbar-options">
-        <a class="roboto-medium nav-bar-btn btn-colorless" href=".">Login</a>
-        <a class="roboto-medium nav-bar-btn btn-primary" href=".">Sign Up</a>
+        <a class="roboto-medium btn nav-bar-btn text-gray" href=".">Login</a>
+        <a class="roboto-medium btn nav-bar-btn btn-primary" href="."
+          >Sign Up</a
+        >
       </li>
     </ul>
   </nav>
