--- a/link-shortener/src/app/components/header/header.component.scss
+++ b/link-shortener/src/app/components/header/header.component.scss
@@ -13,6 +13,7 @@
   width: 90%;
   height: 100%;
   gap: 25px;
+  padding: 0;
 
   li {
     list-style: none;
@@ -41,11 +42,5 @@
   .nav-bar-btn {
     height: 30px;
     width: 100px;
-    border-radius: 50px;
-    text-align: center;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 }
