add margin to hero component

--- a/link-shortener/src/app/components/hero/hero.component.scss
+++ b/link-shortener/src/app/components/hero/hero.component.scss
@@ -4,6 +4,7 @@
   position: relative;
   object-fit: cover;
   overflow: hidden;
+  margin-block: 30px;
 
   .presentation {
     position: absolute;
