--- a/link-shortener/src/app/components/shortener/shortener.component.html
+++ b/link-shortener/src/app/components/shortener/shortener.component.html
@@ -1,1 +1,16 @@
-<p>shortener works!</p>
+<div class="shortener-input-container">
+  <input
+    #shortenerInput
+    id="shortener-input"
+    class="roboto-medium"
+    name="url"
+    type="text"
+  />
+
+  <button
+    class="btn shorten-btn btn-primary roboto-medium"
+    (click)="generateShortedUrl(shortenerInput.value)"
+  >
+    Shorten It!
+  </button>
+</div>
